tests/fixtures/hub-module/example/1/bad/src/hub.ts
import { alphaValue } from "./alpha.js"
import { betaValue } from "./beta.js"
import { gammaValue } from "./gamma.js"
import { deltaValue } from "./delta.js"
import { epsilonValue } from "./epsilon.js"
import { zetaValue } from "./zeta.js"

export const op1 = (): string => alphaValue
export const op2 = (): string => alphaValue.toUpperCase()
export const op3 = (): string => betaValue
export const op4 = (): string => betaValue.toUpperCase()
export const op5 = (): string => gammaValue
export const op6 = (): string => gammaValue.toUpperCase()
export const op7 = (): string => deltaValue
export const op8 = (): string => deltaValue.toUpperCase()
export const op9 = (): string => epsilonValue
export const op10 = (): string => epsilonValue.toUpperCase()
export const op11 = (): string => zetaValue
export const op12 = (): string => zetaValue.toUpperCase()
